@@ -2509,6 +2509,9 @@ public class SyncProxyTester extends FragmentActivity implements OnClickListener
                             final CheckBox graphicCheck = (CheckBox) layout.findViewById(R.id.show_graphicCheck);
                             final Spinner graphicType = (Spinner) layout.findViewById(R.id.show_graphicType);
                             final EditText graphic = (EditText) layout.findViewById(R.id.show_graphic);
+                            final CheckBox secondaryGraphicCheck = (CheckBox) layout.findViewById(R.id.show_secondaryGraphicCheck);
+                            final Spinner secondaryGraphicType = (Spinner) layout.findViewById(R.id.show_secondaryGraphicType);
+                            final EditText secondaryGraphic = (EditText) layout.findViewById(R.id.show_secondaryGraphic);
                             chkIncludeSoftButtons = (CheckBox) layout.findViewById(R.id.show_chkIncludeSBs);
                             final Button softButtons = (Button) layout.findViewById(R.id.show_btnSoftButtons);
                             final CheckBox customPresetsCheck = (CheckBox) layout.findViewById(R.id.show_customPresetsCheck);
@@ -2532,6 +2535,8 @@ public class SyncProxyTester extends FragmentActivity implements OnClickListener
 
                             graphicType.setAdapter(imageTypeAdapter);
                             graphicType.setSelection(imageTypeAdapter.getPosition(ImageType.DYNAMIC));
+                            secondaryGraphicType.setAdapter(imageTypeAdapter);
+                            secondaryGraphicType.setSelection(imageTypeAdapter.getPosition(ImageType.DYNAMIC));
 
                             SoftButton sb1 = new SoftButton();
                             sb1.setSoftButtonID(SyncProxyTester.getNewSoftButtonId());
@@ -2606,6 +2611,12 @@ public class SyncProxyTester extends FragmentActivity implements OnClickListener
                                             image.setImageType((ImageType) graphicType.getSelectedItem());
                                             image.setValue(graphic.getText().toString());
                                             msg.setGraphic(image);
+                                        }
+                                        if (secondaryGraphicCheck.isChecked()) {
+                                            Image image = new Image();
+                                            image.setImageType((ImageType) secondaryGraphicType.getSelectedItem());
+                                            image.setValue(secondaryGraphic.getText().toString());
+                                            msg.setSecondaryGraphic(image);
                                         }
                                         if (chkIncludeSoftButtons.isChecked() &&
                                                 (currentSoftButtons != null) &&
