@@ -1,156 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/show_Root"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+            android:id="@+id/show_Root"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:minWidth="300dp"
-        android:orientation="vertical"
-        android:paddingLeft="10dip"
-        android:paddingRight="10dip" >
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="300dp"
+            android:orientation="vertical"
+            android:paddingLeft="10dip"
+            android:paddingRight="10dip">
 
         <CheckBox
-            android:id="@+id/show_mainField1Check"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_mainField1"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_mainField1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_mainField1Default" />
-
-        <CheckBox
-            android:id="@+id/show_mainField2Check"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_mainField2"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_mainField2"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_mainField2Default" />
-
-        <CheckBox
-            android:id="@+id/show_mainField3Check"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_mainField3"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_mainField3"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_mainField3Default" />
-
-        <CheckBox
-            android:id="@+id/show_mainField4Check"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_mainField4"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_mainField4"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_mainField4Default" />
-
-        <CheckBox
-            android:id="@+id/show_textAlignmentCheck"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_textAlignment"
-            android:textStyle="bold" />
-
-        <Spinner
-            android:id="@+id/show_textAlignmentSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <CheckBox
-            android:id="@+id/show_statusBarCheck"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_statusBar"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_statusBar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_statusBarDefault" />
-
-        <CheckBox
-            android:id="@+id/show_mediaTrackCheck"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_mediaTrack"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/show_mediaTrack"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_mediaTrackDefault" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <CheckBox
-                android:id="@+id/show_mediaClockCheck"
-                android:layout_width="wrap_content"
+                android:id="@+id/show_mainField1Check"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="@string/show_mediaClock"
-                android:textStyle="bold" />
+                android:text="@string/show_mainField1"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_mainField1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_mainField1Default"/>
+
+        <CheckBox
+                android:id="@+id/show_mainField2Check"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_mainField2"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_mainField2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_mainField2Default"/>
+
+        <CheckBox
+                android:id="@+id/show_mainField3Check"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_mainField3"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_mainField3"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_mainField3Default"/>
+
+        <CheckBox
+                android:id="@+id/show_mainField4Check"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_mainField4"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_mainField4"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_mainField4Default"/>
+
+        <CheckBox
+                android:id="@+id/show_textAlignmentCheck"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_textAlignment"
+                android:textStyle="bold"/>
+
+        <Spinner
+                android:id="@+id/show_textAlignmentSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        <CheckBox
+                android:id="@+id/show_statusBarCheck"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_statusBar"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_statusBar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_statusBarDefault"/>
+
+        <CheckBox
+                android:id="@+id/show_mediaTrackCheck"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_mediaTrack"
+                android:textStyle="bold"/>
+
+        <EditText
+                android:id="@+id/show_mediaTrack"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_mediaTrackDefault"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <CheckBox
+                    android:id="@+id/show_mediaClockCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/show_mediaClock"
+                    android:textStyle="bold"/>
 
             <EditText
-                android:id="@+id/show_mediaClock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="text|time"
-                android:maxLength="500"
-                android:text="@string/show_mediaClockDefault" />
+                    android:id="@+id/show_mediaClock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="text|time"
+                    android:maxLength="500"
+                    android:text="@string/show_mediaClockDefault"/>
         </LinearLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
             <CheckBox
                     android:id="@+id/show_graphicCheck"
@@ -158,59 +158,85 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:checked="true"
-                    android:text="@string/show_graphic"
-                    android:textStyle="bold" />
+                    android:text="@string/show_graphic"/>
 
             <Spinner
                     android:id="@+id/show_graphicType"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"/>
         </LinearLayout>
 
         <EditText
-            android:id="@+id/show_graphic"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:maxLength="500"
-            android:text="@string/show_graphicDefault" />
+                android:id="@+id/show_graphic"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLength="500"
+                android:text="@string/show_graphicDefault"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <CheckBox
-                android:id="@+id/show_chkIncludeSBs"
-                android:layout_width="wrap_content"
+                    android:id="@+id/show_secondaryGraphicCheck"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:checked="true"
+                    android:text="@string/show_secondaryGraphic"/>
+
+            <Spinner
+                    android:id="@+id/show_secondaryGraphicType"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+        </LinearLayout>
+
+        <EditText
+                android:id="@+id/show_secondaryGraphic"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/includeSoftButtons" />
+                android:inputType="text"
+                android:maxLength="500"
+                android:text="@string/show_secondaryGraphicDefault"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <CheckBox
+                    android:id="@+id/show_chkIncludeSBs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="@string/includeSoftButtons"/>
 
             <Button
-                android:id="@+id/show_btnSoftButtons"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/softButtons" />
+                    android:id="@+id/show_btnSoftButtons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/softButtons"/>
         </LinearLayout>
 
         <CheckBox
-            android:id="@+id/show_customPresetsCheck"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/show_customPresets"
-            android:textStyle="bold" />
+                android:id="@+id/show_customPresetsCheck"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/show_customPresets"
+                android:textStyle="bold"/>
 
         <EditText
-            android:id="@+id/show_customPresets"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:freezesText="true"
-            android:inputType="textCapWords"
-            android:maxLength="500"
-            android:text="@string/show_customPresetsDefault" />
+                android:id="@+id/show_customPresets"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:freezesText="true"
+                android:inputType="textCapWords"
+                android:maxLength="500"
+                android:text="@string/show_customPresetsDefault"/>
     </LinearLayout>
 
 </ScrollView>
