@@ -1,4 +1,5 @@
 [CW7]
++ Add secondaryGraphic parameter to Show UI.
 + SyncProxyAndroid SDK: Add secondaryGraphic parameter to Show request.
 - Remove encrypted parameter from ReadDID UI.
 * SyncProxyAndroid SDK: Add DIDResult struct. Update ReadDID and ReadDIDResponse.
